# product-api/swagger.yaml
@@ -93,13 +93,6 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/Product'
-      - description: The id of the product for which the operation relates
-        format: int64
-        in: path
-        name: id
-        required: true
-        type: integer
-        x-go-name: ID
       responses:
         "201":
           $ref: '#/responses/noContentResponse'
@@ -114,7 +107,7 @@ paths:
       description: Delete a product
       operationId: deleteProduct
       parameters:
-      - description: The id of the product to delete from the database
+      - description: The id of the product for which the operation relates
         format: int64
         in: path
         name: id
@@ -132,7 +125,15 @@ paths:
       - products
     get:
       description: Return a list of products from the database
-      operationId: listSingle
+      operationId: listSingleProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
       responses:
         "200":
           $ref: '#/responses/productResponse'
